--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="buttondiv">
 
         <button type="button" id="knapp" onclick="onpressed()">Klicka mig</button>
+        <p>Text test :)</p>
 
     </div>
 
